--- a/Akka.Serialization.MessagePack/Akka.Serialization.MessagePack.csproj
+++ b/Akka.Serialization.MessagePack/Akka.Serialization.MessagePack.csproj
@@ -16,9 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.3.0" />
-    <PackageReference Include="MessagePack" Version="1.6.1.2" />
-    <PackageReference Include="MessagePack.ImmutableCollection" Version="1.6.1.2" />
+    <PackageReference Include="Akka" Version="1.3.14" />
+    <PackageReference Include="MessagePack" Version="1.7.3.7" />
+    <PackageReference Include="MessagePack.FSharpExtensions" Version="1.4.1" />
+    <PackageReference Include="MessagePack.ImmutableCollection" Version="1.7.3.7" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
