--- a/Akka.Serialization.MessagePack.FSharp.Bench/Akka.Serialization.MessagePack.FSharp.Bench.fsproj
+++ b/Akka.Serialization.MessagePack.FSharp.Bench/Akka.Serialization.MessagePack.FSharp.Bench.fsproj
@@ -2,11 +2,20 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Akka.Serialization.Hyperion" Version="1.3.14-beta" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Akka.Serialization.MessagePack.FSharp\Akka.Serialization.MessagePack.FSharp.csproj" />
   </ItemGroup>
 
 </Project>
